[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeutils"
version = "0"
dependencies = [
    #"diffusers==0.11.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["codeutils"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 144  
split_arguments_when_comma_terminated = false